# OpenHPE

./: CMakeLists.txt  README  bg_fg_blobs.cpp  freenect_ocv.cpp  hand_data.h  main.cpp  simple_tnc.c  tnc.c  tnc.h
cmake/Modules/: Findfreenect.cmake
